...
  return (
    <View style={styles.container}>
      <View style={[styles.searchContainer]}>
        <FontAwesome name="map-marker" size={20} color="#8B1D3B" style={styles.icon} />
        <TextInput
          style={styles.searchInput}
          placeholder="Where to?"
          placeholderTextColor="#555"
          value={destination}
          onFocus={() => handlePress()}
        />
        {destination.length > 0 && (
          <TouchableOpacity testID="clear-search-button" onPress={clearSearch} style={styles.clearButton}>
...
