...
      setFloor(currentFloor - 1);
    }
  };
  return (
    <View style={styles.view}>
      <View style={styles.buttonView}>
        <TouchableOpacity style={styles.button} onPress={decrement} testID="prev-button">
          <Text style={styles.text}>{"< Prev Step"}</Text>
        </TouchableOpacity>
        <TouchableOpacity style={styles.button} onPress={increment} testID="next-button">
          <Text style={styles.text}>{"Next Step >"}</Text>
        </TouchableOpacity>
      </View>
      {isSearching ? (
        <Text style={styles.stepText}>
          {"["}Step {currentFloor + 1}/{maxFloor + 1}
...
