...
  };

  return (
    <SafeAreaView style={styles.safeArea}>
      <Animated.View style={[styles.container, { opacity: fadeIn }]} testID="footer-container">
        <View style={styles.buttonWrapper}>
          <TouchableOpacity style={styles.startButton} onPress={onPress} testID="start-button">
            <Icon name="location-arrow" size={20} color="#800020" style={styles.icon} testID="icon" />
            <Text style={styles.startButtonText} testID="start-button-text">
              Get Direction
            </Text>
          </TouchableOpacity>
          <AccessibleRouteButton
            showAccessibleRoute={showAccessibleRoute}
            setShowAccessibleRoute={setShowAccessibleRoute}
            onShowDirections={onPress}
...
