...
      <View style={styles.inputContainer}>
        <Ionicons name="chevron-down-circle-outline" size={20} color="#800020" style={styles.icon} />
        <TextInput
          testID="start-address-input"
          ref={startAddressRef}
          style={[styles.input, { zIndex: 100 }]}
          placeholder="Starting Room (ex: H867)"
          value={startAddress}
          onChangeText={text => onModifyAddress("start", text)} // Updates parent but does NOT trigger API
          onFocus={() => handlePress("start")}
        />
      </View>

      <View style={styles.inputContainer}>
        <Ionicons name="location-outline" size={20} color="#800020" style={styles.icon} />
        <TextInput
          testID="destination-address-input"
          ref={destinationAddressRef}
          style={styles.input}
          placeholder="Destination Room (ex: MB1.125)"
          value={destinationAddress}
          onChangeText={text => onModifyAddress("destination", text)} // updates parent WITHOUT triggering API - avoid sending endless useless api calls
          onFocus={() => handlePress("destination")}
        />
      </View>
    </KeyboardAvoidingView>
...
