appId: host.exp.Exponent
---
# Feature 1.1 - Show Both Campuses
- assertVisible:
    id: "map-view"
- assertVisible: "Where to?"
- assertVisible:
    id: "campus-button"
- assertVisible: "Outdoor"
- assertVisible: "Indoor"
- assertVisible: "My Location"
# Feature 1.3 - Toggle between campuses
- tapOn:
    id: "campus-button"
- assertVisible:
    id: "map-view"
- assertVisible: "Loyola"
- assertVisible: "Where to?"
- assertVisible:
    id: "campus-button"
- assertVisible: "Outdoor"
- assertVisible: "Indoor"
- assertVisible: "My Location"
- doubleTapOn: # zoom in on map to show markers
    id: "map-view"
# Feature 1.5 - Show Info About Buildings
- tapOn: "Map Marker"
- assertVisible: "Campus: LOY"
- assertVisible: "Parking"
- assertVisible: "Accessible"
- assertVisible: "ATM"
- assertVisible: ", Directions"
- assertVisible: ""
- tapOn: "" # close building info popup
# Feature 1.3 - Toggle Between Campuses
- tapOn:
    id: "campus-button"
- assertVisible: "Sir George Williams"
# Feature 1.4 - Show User GPS Location
- setLocation:
    latitude: 45.495183
    longitude: -73.577860
- assertVisible: "My Location"
