appId: host.exp.Exponent
name: "Home Page"
---
- launchApp:
  clearState: "true" # ensures that each test starts with a clean slate for better performance
# Home Page
- extendedWaitUntil:
    visible: "Welcome to"
    timeout: 10000 #timeout to allow for slow emulator response
- assertVisible: "ConU CG"
- assertVisible: "Continue to map ➤"
- tapOn: "Continue to map ➤"
# set location directly in android studio device setting; uncomment if needed
#- setLocation:
#latitude: 45.497660
#longitude: -73.579162
# specify location permission when necessary
# android
- runFlow:
    when:
      visible: "While using the app"
      platform: android
    file: ./subflows/location_permission_android.flow.yaml
# ios
- runFlow:
    when:
      visible: "Allow While Using App"
      platform: ios
    file: ./subflows/location_permission_ios.flow.yaml
