appId: host.exp.Exponent
---
- launchApp:
  clearState: "true"
#Startup Page
- extendedWaitUntil:
    visible: "Welcome to"
    timeout: 10000 #timeout to allow for slow emulator response
- assertVisible: "ConU CG"
- assertVisible: "Continue to map ➤"
- tapOn: "Continue to map ➤"
- setLocation:
    latitude: 45.497660
    longitude: -73.579162
- runFlow:
    when:
      visible: "While using the app"
      platform: android
    file: ./subflows/location_permission_android.flow.yaml
- runFlow:
    when:
      visible: "Allow While Using App"
      platform: ios
    file: ./subflows/location_permission_ios.flow.yaml

#Sidebar
- runFlow: ./subflows/sidebar.flow.yaml

# Run Feature 1 - Explore the Campus Map
- runFlow: ./subflows/feature_1.flow.yaml

# Feature 2 - Outdoor Directions
- runFlow: ./subflows/feature_2.flow.yaml
