appId: host.exp.Exponent
name: "Feature 4 - Indoor Directions"
---
- launchApp:
  clearState: "true" # ensures that each test starts with a clean slate for better performance
# start test at mapview
# 4.1: locate rooms on indoor maps
- tapOn: "Indoor"
- runFlow:
    when:
      visible: "Get Direction"
    file: ./subflows/assert_render_indoor_mapview.flow.yaml
# indoor navigation
# 4.2: show shortest path directions
# select starting point by typing room number
- tapOn: "Starting Room (ex: H867)"
- inputText:
    text: "H867"
    into: Start Address"
# select destination room by typing room number
- tapOn: "Destination Room (ex: MB1.125)"
- inputText:
    text: "H837"
    into: "Destination Address"
- tapOn: "Back" # exiting keyboard
- tapOn:
    id: "start-button"
# assert indoor navigation page
- assertVisible: "Current Floor: H8"
- runFlow:
    when:
      visible: "Get Direction"
    file: ./subflows/assert_render_indoor_mapview.flow.yaml
# exit navigation
- tapOn: "←"
